--- a/templates/etatmssyncconfig.html
+++ b/templates/etatmssyncconfig.html
@@ -1,9 +1,1 @@
-{extends file="layout.html"}
-{block name=title}TmsSync server management{/block}
-{block name=module_content}
-<H1>{$layout.pagetitle}</H1>
-<div>
-  config
-</div>
-<script src="/js/etatmssync/m.js"></script>
-{/block}
+{extends file="layout.html"} {block name=title}TmsSync server management{/block} {block name=module_content}<h1>{$layout.pagetitle}</h1><div>config test 2</div>{/block}<script type="text/javascript" src="/js/etatmssync/d4e8325efd61c39c0567.js"></script>
