panel css fixes

--- a/templates/customer/customerinfo.html
+++ b/templates/customer/customerinfo.html
@@ -4,6 +4,6 @@
 		|| ConfigHelper::checkPrivilege('etatmssync_device_manager')
         || ConfigHelper::checkPrivilege('etatmssync_read_access')}
         {include file="etatmssync/devices.inc.html"}
-        <script src="/js/etatmssync/etatmssync.vendor.js"></script>
+        <script src="/js/etatmssync/etatmssync.vendor.js?v=1720678114"></script>
     {/if}
 {/block}
